# EECS206A

./: .gitignore  README.md
devel/: .catkin  .rosinstall
docs/: CNAME  carousel.html  index.html
docs/assets/css/: carousel.css  custom.css  main.css
ref/mapping/src/: occupancy_grid_2d.py
ref/segmentation/src/: image_segmentation.py  main.py
ref/turtlebot_control/: package.xml
ref/turtlebot_control/src/: turtlebot_control.py
src/balebot/: CMakeLists.txt  package.xml
src/balebot/launch/: follow.launch  keyboard_teleop.launch  robot.launch  rviz.launch  simulator.launch  teleop.launch
src/balebot/src/: follow_controller.py  frame_publisher.py  motion_controller.py  path_planner.py  state_controller.py  state_observer.py
src/control/: CMakeLists.txt  package.xml
src/control/src/: frame_publisher.py  motion_controller.py
src/cv/: package.xml
src/lab4_cam/launch/: ar_track.launch
src/mapping/: package.xml
src/mapping/launch/: demo.launch
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: group_frame.launch
src/perception/src/: group_frame.py  maths_helper.py  test_group_frame.py
src/planning/: CMakeLists.txt  package.xml
src/planning/launch/: path_planner.launch
src/planning/src/: maths_helper.py  path_planner.py
src/rbm/: package.xml  test.txt
src/segmentation/src/: pointcloud_segmentation.py
src/sensing/: CMakeLists.txt  package.xml
src/sensing/launch/: rviz.launch
src/sensing/src/: state_observer.py
src/test/: CMakeLists.txt  package.xml
src/turtlebot_control/: CMakeLists.txt
src/turtlebot_control/src/: adv_control.py
