<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>

  <maintainer email="philippe@fdesousa.fr">Philippe FERREIRA DE SOUSA, Joshua Lin, Leo TOULET, Ayusman Saha, Tarun Singh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf_conversions</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
</package>
