<?xml version="1.0"?>
<package format="2">
  <name>sensing</name>
  <version>0.0.1</version>
  <description>Robot sensing package</description>
  <maintainer email="aysaha@berkeley.edu">Ayusman Saha</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
